data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1774.wast
;; 5. **Branch Type Reinforcement**:    Use a block type `[t*1] -> [t*2]` where `br` instructions enforce type constraints on stack state transitioning between the block's scope. This validates if the type context is correctly maintained during branching.

(assert_invalid
  (module (func $type-branch-validation (result i32)
    (block (result i32) 
      (block (result i32) 
        (br 1 (f32.const 0.0))) 
      (i32.const 1)
    )
  ))
  "type mismatch"
)